# rust-ai-labs

./: .gitignore  README.md
ai_api/: Cargo.toml  Dockerfile
ai_api/scripts/: boot_docker.sh  build_docker.sh
ai_api/src/: config.rs  errors.rs  main.rs  model.rs  routes.rs  types.rs
ai_api/src/utils/: classes.rs  common.rs  image.rs  mod.rs
ai_image_generation/backend/: Cargo.toml
ai_image_generation/backend/public/: index.html  script.js
ai_image_generation/backend/public/assets/: styles.css
ai_image_generation/backend/src/: configs.rs  errors.rs  image_lib.rs  main.rs  model.rs  routes.rs  types.rs
ai_image_generation/backend/src/ai/: mod.rs  model_files.rs  stable_diffusion.rs  text_encoder.rs  tokenizer.rs  unet.rs  vae.rs
