[package]
name = "ai_api"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
base64 = "0.22.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = "0.19"
tract-onnx = "0.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
image = "0.24"
