[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
base64 = "0.22.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = "0.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

image = "0.25.5"
anyhow = "1.0.97"
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-transformers = "0.8.2"
candle-nn = { version = "0.8.2", features = ["cuda"] }

safetensors = "0.5.3"
rand = "0.9.0"
tokenizers = "0.21.0"
